--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+
+    <!-- Pasar imagen con token en la URL -->
+    <!-- <img src="http://localhost:3000/imagen/productos/5ad69d9eb213f374b906761d-565.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvREIiOnsicm9sZSI6IlVTRVJfUk9MRSIsImVzdGFkbyI6dHJ1ZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWFkNTZkNDRhODI3NGQ1NDNlNGI0YjU0Iiwibm9tYnJlIjoidGVzdDE4IiwiZW1haWwiOiJ0ZXN0MThAbm9kZS5qcyIsIl9fdiI6MCwiaW1nIjoiNWFkNTZkNDRhODI3NGQ1NDNlNGI0YjU0LTU2NC5wbmcifSwiaWF0IjoxNTI0MDIxNjg4LCJleHAiOjE1MjQxOTQ0ODh9.vWFJdgCQ_Y5Ls12mp6NmEAiCeVhVds5cOZuNzE_3fGY" alt=""> -->
+
     <!-- Add a Google Sign-In button -->
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
